@@ -1,4 +1,5 @@
-* [Bug 1176] refclock_parse.c does not compile without PPSAPI
+* [Bug 1175] Instability in PLL daemon mode.
+* [Bug 1176] refclock_parse.c does not compile without PPSAPI.
 (4.2.5p171) 2009/05/04 Released by Harlan Stenn <stenn@ntp.org>
 * Autokey documentation cleanup from Dave Mills.
 * [Bug 1171] line editing libs found without headers (Solaris 11)
